# notnative-omarchy

./: .SRCINFO  CHANGELOG.md  Cargo.toml  PKGBUILD  PKGBUILD.aur  README.md  build.rs  disable-bundled-sqlite.patch  notnative-control.sh  run.sh
assets/: style.css
docs/: BACKGROUND_CONTROL.md  CURL_EXAMPLES.md  KEYBINDINGS.md  MCP_TOOLS_REFERENCE.md  QUICK_NOTES.md
src/: ai_chat.rs  ai_client.rs  app.rs  base_ui.rs  file_watcher.rs  graph_view.rs  i18n.rs  main.rs  music_player.rs  quick_note.rs  system_tray.rs  youtube_server.rs  youtube_transcript.rs
src/ai/: agent.rs  mod.rs  router.rs  tools.rs  tools_extended.rs  tools_folders.rs  tools_web.rs
src/ai/executors/: react.rs  rig_executor.rs
src/core/: base.rs  base_query.rs  base_writer.rs  command.rs  database.rs  editor_mode.rs  embedding_indexer.rs  formula.rs  frontmatter.rs  html_renderer.rs  markdown.rs  mod.rs  note_buffer.rs  note_file.rs  notes_config.rs  property.rs  semantic_search.rs  xlsx_export.rs
src/mcp/: executor.rs  mod.rs  protocol.rs  server.rs  tool_schemas.rs  tools.rs
src/reminders/: database.rs  mod.rs  models.rs  notifications.rs  parser.rs  scheduler.rs
