[package]
name = "notnative-app"
version = "0.1.0"
edition = "2024"

[dependencies]
relm4 = { version = "0.10", features = ["macros"] }
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ropey = "1.6"
pulldown-cmark = { version = "0.10", default-features = false }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
notify = "6"
