[package]
name = "notnative-app"
version = "0.1.4"
edition = "2024"

[dependencies]
relm4 = { version = "0.10", features = ["macros"] }
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
ropey = "1.6"
pulldown-cmark = { version = "0.10", default-features = false }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
rusqlite = { version = "0.31", default-features = false, features = ["column_decltype"] }
reqwest = { version = "0.12", features = ["blocking"] }
open = "5"
regex = "1"
webkit6 = "0.5"
tiny_http = "0.12"
yt-transcript-rs = "0.1.8"
libmpv2 = "4.0"
rustypipe = "0.11"
libc = "0.2"

# AI Chat dependencies
async-openai = "0.24"
async-trait = "0.1"
futures = "0.3"

# MCP Server/Client dependencies
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

# System management
ctrlc = "3.4"

[features]
default = ["sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]
sqlite-system = []

[build-dependencies]
pkg-config = "0.3"
