[package]
name = "notnative-app"
version = "0.1.2"
edition = "2024"

[dependencies]
relm4 = { version = "0.10", features = ["macros"] }
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
ropey = "1.6"
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
rusqlite = { version = "0.32", default-features = false, features = ["column_decltype"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
open = "5"
regex = "1"
sha2 = "0.10"
bincode = "1.3"
webkit6 = "0.5"
tiny_http = "0.12"
yt-transcript-rs = "0.1.8"
libmpv2 = "4.0"
rustypipe = "0.11"
libc = "0.2"
scraper = "0.19"

# AI Chat dependencies
async-openai = "0.24"
async-trait = "0.1"
futures = "0.3"

# MCP Server/Client dependencies
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

# System management
ctrlc = "3.4"

# System tray (StatusNotifierItem para Wayland/X11)
ksni = "0.2"

# Desktop notifications (opcional, compilar con --features notify)
notify-rust = { version = "4", optional = true }

# RIG Agent Framework (siempre habilitado)
rig-core = "0.24"
rig-sqlite = "0.1.27"
sqlite-vec = "0.1"
tokio-rusqlite = "0.6.0"

[features]
default = ["sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]
sqlite-system = []
notify = ["notify-rust"]

[build-dependencies]
pkg-config = "0.3"
